--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-        <script type="text/javascript" src="back&frontend.js" ></script>
+        <script type="text/javascript" src="frontend.js" ></script>
+        <script type="text/javascript" src="backend.js" ></script>
     </head>
 
     <body>
