Put drag&drop patterns in patterns.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script type="text/javascript" src="frontend.js" ></script>
         <script type="text/javascript" src="backend.js" ></script>
+        <script type="text/javascript" src="patterns.js" ></script>
     </head>
 
     <body>
