Changed old title

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
     <head>
         <title>Life!</title>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script type="text/javascript" src="frontend.js" ></script>
-        <script type="text/javascript" src="backend.js" ></script>
-        <script type="text/javascript" src="patterns.js" ></script>
+            <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+            <link rel="stylesheet" type="text/css" href="styles.css">
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+            <script type="text/javascript" src="frontend.js"></script>
+            <script type="text/javascript" src="backend.js"></script>
+            <script type="text/javascript" src="patterns.js"></script>
     </head>
 
     <body>
@@ -20,7 +21,7 @@
 
         <div class="right">
             <div class="right-center">
-                <span class="header2">* cs50 * Final Project *</span><br/><br/><br/>
+                <span class="header2">* * *</span><br/><br/><br/>
                 <span class="header1">Conway's Game of Life</span><br/><br/><br/>
                 <span>by <a id="mail" href="mailto:pawel.swiecki@gmail.com">pawel.swiecki@gmail.com</a></span>
             </div>
