changed living counter

--- a/index.html
+++ b/index.html
@@ -20,38 +20,37 @@
         </div>
 
         <div class="right">
-            <div class="right-center">
+            <div class="right-center big">
                 <span class="header2">* * *</span><br/><br/><br/>
                 <span class="header1">Conway's Game of Life</span><br/><br/><br/>
                 <span>by <a id="mail" href="mailto:pawel.swiecki@gmail.com">pawel.swiecki@gmail.com</a></span>
             </div>
             
             <br/>
-            <div class="right-center">
+            <div class="right-center big">
                 <input id="live" class="button1 active" value="live!" type="button"/>
                 <span class="block"></span>
                 <input id="stop" class="button1 active" value="stop" type="button"/>
                 <span class="block"></span>
                 <input id="reset" class="button1 active" value="reset" type="button"/>
             </div>
+
+            <br/>
+            <div class="right-center small"><span class="header3">Living: <span id="counter"></span></span></div>
+            <div class="right-center small">...</div>
             <br/>
 
-            <div class="right-center">
-                <span class="header3">Living cells: <span id="counter"></span></span>
-            </div>
-            <br/>
-
-            <div class="right-center">
+            <div class="right-center big">
                 simulate <input id="form1" class="form" value="1" type="text"/> generation(s)
             </div>
             <br/>
 
-            <div class="right-center">
+            <div class="right-center big">
                 <input id="form_delay" class="form" value="100" type="text"/> ms between generations
             </div>
             <br/>
 
-            <div class="right-center">
+            <div class="right-center big">
                 <span class="header3">Drag&Drop Patterns</span><br/><br/>
                 <input id="pattern-pulsar" class="button1 active drag-button" value="pulsar" type="button"/>
                 <input id="pattern-glider" class="button1 active drag-button" value="glider" type="button"/>
@@ -60,7 +59,7 @@
             </div>
             <br/>
             
-            <div class="right-center">
+            <div class="right-center big">
                 <span class="header3">Rules</span>
                 <div  style="padding-left: 15px; font-size: 12px;">
                     <ol class="list1" type="1">
