first version of histogram, work in progress

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <script type="text/javascript" src="frontend.js"></script>
             <script type="text/javascript" src="backend.js"></script>
             <script type="text/javascript" src="patterns.js"></script>
+            <script type="text/javascript" src="fixedqueue.js"></script>
     </head>
 
     <body>
@@ -38,7 +39,7 @@
             <div class="right-center">
                 <div class="header3">Living: <span id="counter"></span></div><br/>
 
-                <canvas id="histogram" width="430" height="77">
+                <canvas id="histogram" width="430" height="177">
                     HTML5 Canvas not supported
                 </canvas></div>          
             <br/>
