got rid of *delay between generation thing*

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <br/>
             <div class="right-center">
-                <div class="header3">Living: <span id="counter"></span></div><br/>
+                <div class="header3">Currently living: <span id="counter"></span></div><br/>
 
                 <canvas id="histogram" width="430" height="77">
                     HTML5 Canvas not supported
@@ -46,11 +46,6 @@
 
             <div class="right-center">
                 simulate <input id="form1" class="form" value="1" type="text"/> generation(s)
-            </div>
-            <br/>
-
-            <div class="right-center">
-                <input id="form_delay" class="form" value="100" type="text"/> ms between generations
             </div>
             <br/>
 
