--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Life!</title>
             <meta http-equiv="content-type" content="text/html; charset=utf-8" />
             <link rel="stylesheet" type="text/css" href="styles.css">
-            <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
             <script type="text/javascript" src="frontend.js"></script>
             <script type="text/javascript" src="backend.js"></script>
@@ -15,13 +15,13 @@
 
     <body>
         <div class="left">
-            <canvas id="canv1" width="500" height="150">
+            <canvas id="canv1" width="1" height="1">
                 HTML5 Canvas not supported
             </canvas>
         </div>
 
         <div class="right">
-            <div class="right-center" style="margin-top: 0px;">                
+            <div class="right-center top">
                 <span class="header1">Conway's Game of Life</span><br/><br/><br/>
                 <span>by <a id="mail" href="mailto:pawel.swiecki@gmail.com">pawel.swiecki@gmail.com</a></span>
             </div>
@@ -39,7 +39,7 @@
             <div class="right-center">
                 <div class="header3">Currently living: <span id="counter"></span></div><br/>
 
-                <canvas id="histogram" width="430" height="77">
+                <canvas id="histogram" width="497" height="77">
                     HTML5 Canvas not supported
                 </canvas></div>          
             <br/>
@@ -60,7 +60,7 @@
             
             <div class="right-center">
                 <span class="header3">Rules</span>
-                <div  style="padding-left: 15px; font-size: 12px;">
+                <div class="rules">
                     <ol class="list1" type="1">
                         <li>Alive cell dies if has fewer than two live neighbours (under-population).</li><br/>
                         <li>Alive cell dies if has more than three live neighbours (overcrowding).</li><br/>
