--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
     <head>
         <title>Life!</title>
             <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-            <link rel="stylesheet" type="text/css" href="styles.css">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
-            <script type="text/javascript" src="frontend.js"></script>
-            <script type="text/javascript" src="backend.js"></script>
-            <script type="text/javascript" src="patterns.js"></script>
-            <script type="text/javascript" src="fixedqueue.js"></script>
+            <link rel="stylesheet" type="text/css" href="styles.css">            
     </head>
 
     <body>
         <div class="left">
-            <canvas id="canv1" width="1" height="1">
+            <canvas id="canv1" width="100" height="100">
                 HTML5 Canvas not supported
             </canvas>
         </div>
@@ -74,5 +68,12 @@
             </div>
             <br/>
         </div>
+
+        <!-- SCRIPTS HERE -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script type="text/javascript" src="frontend.js"></script>
+        <script type="text/javascript" src="backend.js"></script>
+        <script type="text/javascript" src="patterns.js"></script>
+        <script type="text/javascript" src="fixedqueue.js"></script>
     </body>
 </html>
