--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div class="left">
+        <div id="divcanv1" class="left" style="display:none;">
             <canvas id="canv1" width="100" height="100">
                 HTML5 Canvas not supported
             </canvas>
