added LWSS (lightweight spaceship) pattern

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <input id="pattern-glider" class="button1 active drag-button" value="glider" type="button"/>
                 <input id="pattern-glider-gun" class="button1 active drag-button" value="glider gun" type="button"/><br/><br/>
                 <input id="pattern-r-pentomino" class="button1 active drag-button" value="r-pentomino" type="button"/>
+                <input id="pattern-LWSS" class="button1 active drag-button" value="LWSS" type="button"/>                
             </div>
             <br/>
 
